--- a/choixMode/choixMode.css
+++ b/choixMode/choixMode.css
@@ -4,9 +4,14 @@ body {
   color: white;
 }
 
+h3 {
+  text-align: center;
+}
+
 .title {
   display: flex;
   justify-content: center;
+  padding-bottom: 64px;
 }
 
 .disconnect {
@@ -14,11 +19,12 @@ body {
   justify-content: flex-end;
   gap: 8px;
   align-items: center;
+  padding-bottom: 32px;
 }
 
 .container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .auto {
@@ -37,4 +43,8 @@ body {
   justify-content: center;
   align-items: center;
   padding: 64px 0px 32px;
+}
+
+.revenir {
+  padding-top: 128px;
 }
