--- a/modes/auto/auto.css
+++ b/modes/auto/auto.css
@@ -4,20 +4,68 @@ body {
   color: white;
 }
 
+.containerHour {
+  padding: 32px;
+  background-color: #3C3535;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.containerButton {
+  justify-content: flex-end;
+  display: flex;
+  padding: 32px;
+}
+
+.select {
+  color: whitesmoke;
+  font-size: 20px;
+  padding: 16px;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  background-color: #ffd0ff;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  padding: 10px 16px;
+  color: #3C3535;
+}
+
+.btn:hover {
+  background-color: #e58fe5;
+}
+
 .hour {
   display: inline-block;
-  width: 64px;
+  width: 100%;
   height: 48px;
   border: 1px solid black;
   text-align: center;
   line-height: 50px;
   cursor: pointer;
+  background-color: red;
 }
 
 .ligne {
-  padding-bottom: 32px;
+  padding-bottom: 16px;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+}
+
+a {
+  color: #ffd0ff;
 }
 
 select {
