--- a/modes/scenarios/scenarios.css
+++ b/modes/scenarios/scenarios.css
@@ -3,3 +3,28 @@ body {
   font-family: 'Poppins', sans-serif;
   color: white;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td {
+  border: 1px solid black;
+  padding: 5px;
+  text-align: center;
+}
+
+button {
+  background-color: green;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  height: 4vh;
+}
+
+button:active {
+  background-color: red;
+}
